added feign client to restaurant service to present dishes for a given restaurant
